# mcp-todo

./: .gitignore  .goosehints  README.md  docker-compose.yml  main.py  mcp-todo.code-workspace  pyproject.toml
config/: settings.py  urls.py
front/: .prettierrc  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
front/e2e/: agent-create.test.ts  agent-delete.test.ts  agent-list.test.ts  agent-update.test.ts  extension-create.test.ts  extension-delete.test.ts  extension-detail.test.ts  extension-list.test.ts  extension-update.test.ts  todo-create.test.ts  todo-delete.test.ts  todo-detail.test.ts  todo-list.test.ts  todo-update.test.ts  todolist-create.test.ts  todolist-delete.test.ts  todolist-detail.test.ts  todolist-list.test.ts  todolist-update.test.ts
front/e2e/agent-create.test.ts-snapshots/: agent-create-linux.html
thoughts/research/: 2026-02-27-0556-improvement-topics.md
todo/: admin.py  emoji.py  mcp_server.py  mcp_server2.py  models.py  serializers.py  test_mcp_server.py  urls.py  utils.py  validate_task.py  views.py
todo/migrations/: 0001_initial.py  0002_rename_files_todo_ref_files.py  0003_remove_agent_command_remove_todolist_repository_and_more.py  0004_remove_todo_completed_at_todo_status.py  0005_todo_timeout_alter_todo_status.py  0006_todo_auto_stash.py  0007_extension_todo_system_prompt_todolist_name_and_more.py  0008_todo_title.py  0009_todo_keep_branch.py  0010_todo_priority.py  0011_todo_finished_at_todo_started_at_alter_todo_timeout.py  0012_todo_interrupted_files_todo_stash_id.py  0013_todolist_parent.py
(+48 files in other folders)
