[project]
name = "mcp-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.16.1",
    "mcp>=1.0",
    "ollama>=0.6.1",
    "pyyaml>=6.0.3",
]

[tool.setuptools]
py-modules = ["config", "todo"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --create-db"

# uv tool install . --editable
[project.scripts]
todo-mcp = "todo.mcp_server:main"
